<resources>
    <string name="app_name">DTU-Basketball</string>
    <string name="action_settings">Settings</string>
    <string name="start_time">Start</string>
    <string name="stop_time">Stop</string>
    <string name="restart_time">Restart</string>
    <string name="title_activity_android_love">AndroidLove</string>
    <string name="button_send">SEND</string>
    <string name="player1">4</string>
    <string name="player2">5</string>
    <string name="player3">6</string>
    <string name="player4">7</string>
    <string name="player5">8</string>
    <string name="player6">9</string>
    <string name="player7">10</string>
    <string name="player8">11</string>
    <string name="player9">12</string>
    <string name="player10">13</string>
    <string name="player11">14</string>
    <string name="player12">15</string>
</resources>
