<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.giannis.dtu_basketball.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:onClick="onStart"
        android:id="@+id/buttonStart" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_time"
        android:onClick="onStop"
        android:visibility="invisible"
        android:id="@+id/buttonStop" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_time"
        android:onClick="onRestart"
        android:layout_alignTop="@+id/buttonStart"
        android:layout_toRightOf="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart"
        android:id="@+id/buttonRestart" />
    <TextView
        android:id="@+id/timeElapsed"
        android:text="Countdown:40&apos;00&quot;"
        android:paddingRight="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonRestart"
        android:layout_toRightOf="@+id/buttonRestart"
        android:layout_toEndOf="@+id/buttonRestart" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player1"
        android:id="@+id/player1"
        android:layout_marginTop="50dp"
      />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player2"
        android:id="@+id/player2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player3"
        android:id="@+id/player3"
        android:layout_marginTop="100dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player4"
        android:id="@+id/player4"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player5"
        android:id="@+id/player5"
        android:layout_marginTop="150dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player6"
        android:id="@+id/player6"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player7"
        android:id="@+id/player7"
        android:layout_marginTop="200dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player8"
        android:id="@+id/player8"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player9"
        android:id="@+id/player9"
        android:layout_marginTop="250dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player10"
        android:id="@+id/player10"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player11"
        android:id="@+id/player11"
        android:layout_marginTop="300dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/player12"
        android:id="@+id/player12"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="120dp"
        />

</RelativeLayout>
